src/components/Main.css
.main {
  position: relative;
  height: 100vh;
  min-height: 550px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 15px 5px;
  box-sizing: border-box;
  color: #fff;
}

@media screen and (max-width: 600px) {
  .main {
    padding: 8px;
  }
}

